--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -9,8 +9,8 @@ nelmio_cors:
     paths:
         '^/':
             origin_regex: true
-            allow_origin: [ '%env(CORS_ALLOW_ORIGIN)%' ]
-            allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE' ]
-            allow_headers: ['*']
+            allow_origin: [ '*' ]
+            allow_headers: [ '*' ]
+            allow_methods: [ 'POST', 'PUT', 'GET', 'DELETE' ]
             expose_headers: [ 'Link' ]
             max_age: 3600
